<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">EasyWay</string>
    <string name="titulo_login">Acessar conta</string>
    <string name="titulo_cadastrar">Cadastrar conta</string>

    //Nome_Título
    <string name="nome">EasyWay</string>

    //Textos_MainActivity
    <string name="explicacao_app">Bem-vindo(a) ao EasyWay, o seu novo aplicativo de acompanhamento médico.</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="Idioma">Idioma</string>

    //Textos_CadastroActivity
    <string name="informardados">Informe seus dados</string>
    <string name="verificarinfo">Verificaremos suas informações!</string>
    <string name="nome_completo">Nome</string>

    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="btnLimpar">Limpar Dados</string>


    //Textos_Login
    <string name="dadosacesso">Informe seus dados de acesso</string>
    <string name="btnSair">Sair</string>
    <string name="esqueceu">Esqueceu a senha?</string>
    <string name="lembrar">Lembrar-me</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_login">Nome</string>

    //Textos_Recuperar Senha
    <string name="titulorecuperar">Recuperar Senha</string>
    <string name="descricao">Bem-vindo, utilizamos o e-mail como método de recuperação de senha. Por isso, após enviar confira sua senha temporária.</string>
    <string name="btnEnviar">Enviar</string>


    //Agendar
    <string name="hora">Horário</string>
    <string name="btnAgendar">Agendar</string>
    <string name="desc_calendario">Selecione uma data de sua preferência</string>
    <string name="tit_agendamento">Faça o seu agendamento</string>
    <string name="desc_agendamento">Basta navegar entre as telas e preencher as informações necessárias!</string>
    <string name="tit_final_agendamento">Falta pouco! Preencha os últimos dados para agendar sua consulta</string>

    <string-array name="idioma">
        <item>PT-BR</item>
        <item>EN</item>
        <item>ES</item>
        <item>FR</item>
        <item>HU</item>
        <item>DE</item>
        <item>IT</item>
    </string-array>
    // Histórico

    <string name="historico">Histórico</string>

    // Avisos

    <string name="avisos_titulo">Avisos</string>


    // Menu Usuário
    <string name="titulo_prontuario">Prontuário</string>
    <string name="resumo_prontuario">Acesse seu prontuário.</string>


    // Menu Sair Usuário
    <string name="sair_sim">Sim</string>
    <string name="sair_nao">Não</string>
    <string name="sair_titulo">Tem certeza que deseja sair?</string>


    <string-array name="categorias">
        <item>Selecione uma categoria</item>
        <item>Clinico Geral</item>
        <item>Geriatria</item>
        <item>Cardiologia</item>
        <item>Dermatologia</item>
        <item>Pediatria</item>
        <item>Radiologia</item>
    </string-array>

    <string-array name="medicos">
        <item>Selecione um médico(a)</item>
        <item>Medico</item>
    </string-array>

    // Verificar
    <string name="tit_agendar">Agendar</string>
    <string name="tit_avisos">Avisos</string>
    <string name="tit_historico">Histórico</string>
    <string name="tit_sair">Sair</string>
    <string name="tit_monitoramento">Monitoramento</string>
    <string name="tit_validacao">Validações</string>
    <string name="tit_consulta">Consultas</string>
    <string name="tit_criar_avisos">Criar Avisos</string>
    <string name="tit_qr_code">Qr Code</string>

    <string name="desc_agendar">Agende sua consulta.</string>
    <string name="desc_avisos">Mural de avisos do aplicativo.</string>
    <string name="desc_historico">Consulte sua agenda.</string>
    <string name="desc_sair">Deseja sair do aplicativo?</string>
    <string name="desc_monitoramento">Monitore internações.</string>
    <string name="desc_validacao">Validações das enfermeiras.</string>
    <string name="desc_consultas">Veja quem serão seus pacientes!</string>
    <string name="desc_criar_avisos">Digite avisos aos pacientes.</string>
    <string name="desc_validacao_enfermeira">Validações de pacientes.</string>
    <string name="desc_qr_code">Verifique o BPM do paciente.</string>

    // Enfermeira e Médico
    <string name="titulo_monitorar">Monitoramento</string>
    <string name="titulo_validar">Validação</string>
    <string name="titulo_avisos">Meus Avisos</string>
    <string name="titulo_consultas">Consultas</string>

    // Agendamento
    <string name="erro_data">Por favor, insira uma data válida!</string>

    <string-array name="tit_meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    <string-array name="tit_semanas">
        <item>Seg</item>
        <item>Ter</item>
        <item>Qua</item>
        <item>Qui</item>
        <item>Sex</item>
        <item>Sab</item>
        <item>Dom</item>
    </string-array>

    // Agendamento
    <string name="tit_add_agendamento">Dados da consulta</string>
    <string name="des_add_agendamento">Precisamos do horário, e depois a data.</string>
    <string name="hint_horario">Horário</string>
    <string name="hint_data">Data</string>

    <string name="validacao_senha">A senha deve conter pelo menos 8 caracteres.</string>
    <string name="validacao_email">Digite um e-mail válido.</string>
    <string name="validacao_documento">Número de CPF (Cadastro de Pessoa Física) inválido ou vazio!</string>
    <string name="validacao_nome">Nome inválido. Por favor, digite o seu nome completo.</string>
    <string name="cpf_padrao">Documento</string>

    <string name="categoria">Selecione uma categoria</string>

    <string name="tit_medico">Médico(a)</string>
    <string name="tit_account">Configurações</string>

    <string name="tit_perfil">Perfil do Usuário</string>
    <string name="desc_perfil">Altere algumas de suas configurações</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="alterar_dados">Atualizar Dados</string>
    <string name="antiga_senha">Antiga senha</string>
    <string name="nova_senha">Nova senha</string>
    <string name="alterar">Alterar</string>

    <string name="configuracoes">Configurações</string>
    <string name="desc_account">Altere suas informações.</string>

    <string name="prontuario">Resumo do Prontuário</string>

    <string name="historico_bpm">Histórico de BPM</string>
    <string name="tit_bpm">Histórico de BPM</string>

    <string name="tit_listar_prontuario">Prontuários</string>
    <string name="desc_listar_prontuario">Verificar todos os prontuários.</string>

    <string name="tit_data">Data</string>
    <string name="tit_status">Status</string>
    <string name="status_agendamento">Agendado</string>

    <string name="desc_bpm">Consulte o histórico de BPM dos pacientes</string>

    <string name="title_activity_menu_usr2" translatable="false">MenuUsrActivity2</string>
    <string name="title_activity_main_user" translatable="false">MainUserActivity</string>

    // Novos ****** Novo *******
    <string name="basic_info">Basta preencher as informações necessárias!</string>
    <string name="info_hour_date">Informe o horário e a data \nde agendamento!</string>
    <string name="info_doctor_spaciality">Selecione a especialidade \n e o doutor de sua preferência</string>

    <string name="speciality">Especialidade:</string>
    <string name="data">Data:</string>
    <string name="status">Status:</string>

    <string name="excluir_agendamento">Excluir Agendamento</string>

    <string name="speciality_notdot">Especialidade</string>
    <string name="sintomas">Sintomas</string>
    <string name="status_notdot">Status</string>
    <string name="diagnosticos">Diagnósticos</string>
    <string name="notas">Notas</string>

    <string name="historicotitle">Histórico</string>
    <string name="prontuariotitle">Prontuário</string>
    <string name="detalhes_agendamento">Detalhes do Agendamento</string>
    <string name="detalhes_prontuario">Detalhes do Prontuário</string>
    <string name="perfil_usuario">Perfil do Usuário</string>

    <string name="boasvindas">Bem-vindo(a), </string>

    <string name="sucesso_agendamento">Agendamento realizado com sucesso</string>
    <string name="erro_agendamento">Falha ao realizar o agendamento</string>

    <string name="detalhes_agendamento_msg">Visualize todas as informações dos seus agendamentos</string>
    <string name="detalhes_prontuario_msg">Visualize todas as informações dos seus prontuários</string>

    // API Calendario Meses
    <string name="janeiro">Janeiro</string>
    <string name="fevereiro">Fevereiro</string>
    <string name="marco">Março</string>
    <string name="abril">Abril</string>
    <string name="maio">Maio</string>
    <string name="junho">Junho</string>
    <string name="julho">Julho</string>
    <string name="agosto">Agosto</string>
    <string name="setembro">Setembro</string>
    <string name="outubro">Outubro</string>
    <string name="novembro">Novembro</string>
    <string name="dezembro">Dezembro</string>

    <string name="validation_register">Cadastro realizado com sucesso!</string>
    <string name="validation_register_error">A senha deve conter 8 caracteres e o e-mail deve ser válido!</string>

</resources>
